# Kindle-to-Obsidian

./: .gitignore  LICENSE  README.md  create_book_note.py  get_quotes.py  main.py  openrouter_api.py  pyproject.toml  template.md
